  was needed for that. There are still lots of problems with that,
  especially with placing the cursor and redrawing.
- Implemented Key_Return (== Key_Enter). It seems to work ok, but I'm sure
  that there are also some problems in it (the same as for Key_Delete and
  Key_Backspace). That's because I'm still not totally fimilar with the
  KWFormatContext. So, Torben, please look at the new implemented
  KeyPressEvents and fix the stuff which I did wrong :-))
- Fixed a bug in "Blocksatz" (avoided division by zero if there are no
  spaces in a line).
- Fixed a bug in freeChar().
- There are bigger problems with alignment center and right. The width of
  a line is not calculated correctly - we have to find a way to do that
  quite fast _and_ correctly.

Reggie, 13.9.1998:
------------------
- Implemented KWFormatCollection, and it's already working
- fixed a bug in "Blocksatz"

Reggie, 14.9.1998:
------------------
- Fixed finally THE bug in KWString :-)
- Totally integrated KWFormatCollecion
- Fixed a bug in backspace
- Fixed a bug with joining paragraphs
- Fixed a redraw problem with delete/backspace, but there are still
  problems with setting the cursor.
- Bugfix in printLine
- Bugfix in Key_Delete
- Improoved speed of deleting/inserting text and scrolling the canvas
  (now only the visible text is repainted) 
- Some bugfixes in the KWFormatContext and in printing lines

Reggie, 15.9.1998:
------------------
- Fixed a bug with setting formats
- Added some new GUI stuff

Reggie, 16.9.1998:
------------------
- Started working on alignments/flows. Now you can choose the flow
  for the current paragraph via the toolbar, and the toolbar is
  updated automatically when moving the cursor. Now I have to
  work on the implementation of CENTER and RIGHT, this is really
  broken at the moment...

Reggie, 17.9.1998:
------------------
- Started working on CENTER flow
- Started writing a dialog for paragraph settings